# AI-CERNO

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  live-smoke.yml
cerno/: __init__.py  cli.py  consensus.py  fact_checker.py  resolver.py  retrieval.py  types.py  understanding.py  verification.py
docs/: AGENT_USAGE.md  ARCHITECTURE.md  PROVIDERS.md
tests/: test_cli.py  test_consensus.py  test_fact_checker.py  test_observability.py  test_resolver.py  test_retrieval.py  test_retrieval_live.py  test_types.py  test_understanding.py  test_verification.py
veritas/: __init__.py  cli.py  consensus.py  fact_checker.py  observability.py  resolver.py  retrieval.py  types.py  understanding.py  verification.py
